<resources>
    <string name="app_name">AOS</string>
    <string name="demo">更新</string>
    <string name="movement">公車動態</string>
    <string name="info">公車動態</string>

    <!--homepage-->
    <string name="title">神奇的公車APP</string>
    <string name="scan_stop_sign">掃描\n站牌</string>
    <string name="choose_bus">選擇公車</string>
    <string name="station">站點</string>
    <string name="enter">確定</string>
    <string name="previous">上一頁</string>
    <string name="appeal">我有話要說</string>
    <string name="record">搭車紀錄</string>
    <string name="collection">集點</string>

    <!--qrcode scanner-->
    <string name="scanner">掃描站牌</string>

    <!--appeal-->
    <string name="text_hint">說些什麼</string>
    <string name="text_location">*地點</string>
    <string name="text_time">*時間</string>
    <string name="text_bus_number">*車號</string>
    <string name="text_driver">駕駛員(編號)</string>
    <string name="text_subject">*主旨</string>
    <string name="text_content">*內容</string>
    <string name="text_user_name">聯絡人</string>
    <string name="text_contact">聯絡資料</string>
    <string name="send">送出</string>

    <!--record-->
    <string name="record_passenger">乘客</string>
    <string name="record_bus_number">車號</string>
    <string name="record_on">上車站點</string>
    <string name="record_off">下車站點</string>
    <string name="record_date">日期</string>
    <string name="record_on_time">上車時間</string>
    <string name="record_off_time">下車時間</string>
    <string name="record_license">車牌</string>

    <!--waiting bus-->
    <string name="waiting_bus">等待\n公車</string>
    <string name="cancel">取消</string>

    <!--on bus-->
    <string name="on_bus">乘車中</string>

    <!--choose station-->
    <string name="choose_station">選擇下車車站</string>

    <!--driver-->
    <string name="leave_station">離開車站</string>
    <string name="go_to_next">下站通知</string>
    <string name="need_stop">停車需求</string>
    <string name="next_station">下一站</string>

</resources>