<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAF8B4"
    android:visibility="visible"
    tools:context=".OnBus">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <!--<androidx.appcompat.widget.AppCompatButton-->
    <TextView
        android:id="@+id/on_bus"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/round_button"
        android:backgroundTint="#118E1E"
        android:gravity="center"
        android:text="@string/on_bus"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appeal"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="#074DFF"
        android:text="@string/appeal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/record"
        app:layout_constraintEnd_toStartOf="@+id/record"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="#074DFF"
        android:text="@string/record"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/collection"
        app:layout_constraintStart_toEndOf="@+id/appeal" />

    <TextView
        android:id="@+id/collection"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/collection"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record" />

    <Button
        android:id="@+id/arrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/choose_station"
        app:layout_constraintBottom_toTopOf="@+id/collection"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>