<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7F8FF"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/round_button"
        android:text="@string/scan_stop_sign"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appeal"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="#074DFF"
        android:text="@string/appeal"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/record"
        app:layout_constraintEnd_toStartOf="@+id/record"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/record"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="#074DFF"
        android:text="@string/record"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/collection"
        app:layout_constraintStart_toEndOf="@+id/appeal" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/collection"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="#074DFF"
        android:text="@string/collection"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/record" />

</androidx.constraintlayout.widget.ConstraintLayout>